# shipping-connector-agent

./: .env.example  .gitignore  ARCHITECTURE.md  PRD.md  README.md  TEST_GUIDE.md  prd-v2.md  pyproject.toml  run.sh
backend/: __init__.py  config.py  main.py  persistence.py
backend/agent/: __init__.py  context.py  failure_classifier.py  notifications.py  orchestrator.py  staging_url.py  steps.py
backend/analyzer/: __init__.py  api_discovery.py  llm_client.py  status_extractor.py
backend/api/: routes.py  schemas.py
backend/fetcher/: __init__.py  base.py  detector.py  html_extractor.py  postman.py
backend/generator/: __init__.py  code_generator.py  config_generator.py  storage.py  validator.py
backend/generator/templates/: connector_template.py.jinja2
backend/models/: __init__.py  api_spec.py  shipment.py  status_mapping.py
backend/tester/: __init__.py  endpoint_tester.py  live_test.py
data/: dedup_registry.json
frontend/: app.js  index.html  style.css
