[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gokwik-connector-agent"
version = "0.1.0"
description = "LLM-powered agent to generate shipping connector code from API documentation"
requires-python = ">=3.12"
authors = [
    {name = "GoKwik", email = "dev@gokwik.com"}
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sse-starlette>=2.0",
    "jinja2>=3.1",
    "anthropic>=0.40",
    "openai>=1.50",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.12",
]

fetcher = [
    "playwright>=1.48",
    "pymupdf>=1.24",
    "html2text>=2024.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py312"
line-length = 120
